made home page responsive

--- a/style/components/_aboutme.scss
+++ b/style/components/_aboutme.scss
@@ -5,7 +5,7 @@
     line-height: 1.3em;
 
     h1 {
-      padding-top: 25px;
+      // padding-top: 25px;
     }
     
   }
@@ -136,9 +136,5 @@
     }    
   }
 
-  #list-one{
-      list-style-type: circle;
-      text-decoration: solid;
-    }
 }
 
