--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -21,7 +21,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 10px 15px 0px 15px;
+    padding-top: 20px;
     
     a {  
       font-size: 16px;
