--- a/style/default/_reset.scss
+++ b/style/default/_reset.scss
@@ -1,3 +1,5 @@
+// remove default padding and margins
+
 * {
   padding: 0;
   margin: 0;
@@ -5,11 +7,6 @@
 }
 
 /* hide scrollbar but allow scrolling */
-body {
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll; 
-}
 
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
