--- a/style/components/_aboutme.scss
+++ b/style/components/_aboutme.scss
@@ -1,61 +1,55 @@
 
-  // styling for mobile view 
+  // styling for mobile view first
 
-  body {
-    line-height: 1.3em;
+.about-me-content {
+  // line-height: 1.em;
+}
 
-    h1 {
-      // padding-top: 25px;
-    }
-    
-  }
-  // styling for top paragraph
-  .text-one {
-    @include flex-center;
-    // flex-wrap: wrap;
-  
-    p {
-      color: $pale-purle;
-      width: 300px;
-    } 
-  }
-  // styling for image
-  .img-div {
-    margin: 20px 0 40px 0;
-    @include flex-center;
-  
-    img {
-      border-radius: 25px;
-      width: 300px;
-      height: auto;
-    }
-  }
-// styling for text paragraphs within white section 
-  .div-2 {
-    padding: 0;
-    margin-top: 0;
-    justify-content: space-around;
-    align-items: start;
-    padding-bottom: 30px;
+// styling for top paragraph
+.text-one {
+  @include flex-center;
 
-  .text-two, .text-three, #lists {
-    color: $charcoal;
+  p {
+    color: $pale-purle;
     width: 300px;
+  } 
+}
 
-    p {
-      padding-top: 30px;
-      width: 300px;
-    }
+// styling for image
+.img-div {
+  margin: 20px 0 40px 0;
+  @include flex-center;
 
-    #lists{
-      padding: 20px 0 0 0;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: flex-start;
-      // width: 300px; 
-    }
+  img {
+    border-radius: 25px;
+    width: 300px;
+    height: auto;
   }
+}
+
+// styling for text paragraphs within white section 
+.div-2 {
+  justify-content: space-around;
+  padding-bottom: 30px;
+
+.text-two, .text-three, #lists {
+  color: $charcoal;
+  width: 300px;
+
+  p {
+    padding-top: 30px;
+    width: 300px;
+  }
+
+  #lists{
+    padding: 20px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    // width: 300px; 
+  }
+}
 }
 // button styling for taking user to contact page
 .cta {
@@ -71,7 +65,7 @@
     transition: 0.5s ease;
   }
 
-  main {
+  .about-me-content {
     font-size: 18px;
   }
 
@@ -101,40 +95,29 @@
 
 // screen settings for desktop veiw
 @media screen and (min-width: 1000px) {
-  .intro-container {
-
-    p {
-      font-size: 16px;
-    }
-
-    h1 {
-      font-size: 48px;
-    }
-    // padding: 30px 0  0 150px;
-    // transition: 0.5s ease;
+  .above-line {
+    line-height: 1.3em;
+    font-size: 18px;
   }
-
-  main {
-    font-size: 20px;
-    line-height: 1.5em;
-  }
-
+  
   .img-div {
     padding: 0 25px 25px 0;
+    
     img {
-     width: 450px;
+     width: 400px;
    }
   }
   
   .div-2 {
     .text-two, .text-three {
+    line-height: 1.3em;
+    font-size: 18px;
     width: 400px;
-
+    
     p {
       width: 100%;
     }
     }    
   }
-
 }
 
