--- a/style/components/_contact.scss
+++ b/style/components/_contact.scss
@@ -1,4 +1,4 @@
-
+// title and tagline styling
 .intro-container {
   margin-bottom: 60px;
 }
@@ -11,30 +11,24 @@
 #form-shell {
   @include flex-center;
   flex-direction: column;
-  // justify-content: space-between;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  // justify-content: space-between;
   background-color: $site-white;
   color: $charcoal;
   padding: 20px;
   border: 2px solid $electric-green;
   border-radius: 35px;
   width: 90vw;
-  // height: 40vh;
-
 
   #name-email-message-shell {
     padding-top: 10px;
-    // padding-left: 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
   }
-  
 
   #email-label, #name-label, #message-label{
     padding-right: 15px;
@@ -45,7 +39,6 @@ form {
       margin-bottom: 10px;
       height: 22px;
     }
-
 
     #message-input {
       height: 100px;
@@ -76,6 +69,7 @@ form {
     }
 }
 
+// Tablet sized screen settings 
 @media screen and (min-width: 500px) {
   form {
     width: 490px;
@@ -84,13 +78,12 @@ form {
 
 .resume-btn-shell {
   @include flex-center;
-  // margin: 20px 0 20px 0;
   flex-direction: column;
 
   img {
     width: 200px;
     border-radius: 25px;
-    margin-bottom: 20px;
+    margin: 20px;
   }
 
   p {
@@ -103,7 +96,8 @@ form {
   };
 }
 
-@media screen and (min-width: 800px) {
+// desktop screen sizes
+@media screen and (min-width: 1000px) {
   .main-content-shell {
     display: flex;
     flex-direction: row;
