--- a/style/components/_home.scss
+++ b/style/components/_home.scss
@@ -1,4 +1,3 @@
-@import './buttons';
 
 // intro container styling
 main h1 {
@@ -129,13 +128,15 @@ main h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
+    
     img {
       width: 150px;
       height: 150px;
       border-radius: 15px;
     }
+    
   }
+
   
   #check-me-out {
     text-align: center;
@@ -148,14 +149,11 @@ main h1 {
 }
 
 #special-interests {
-  padding: 25px 25px 0 25px ;
-  max-width: 360px;
-
   @include flex-center;
-  align-items: center;
   flex-direction: column;
-  margin-bottom: 20px;    
-  
+  background-color: $site-white;
+  padding-bottom: 40px;
+
   h2 {
     color: $skobeloff;
     text-decoration: underline;
@@ -164,18 +162,19 @@ main h1 {
   }
 
   #list-and-bargraph {
+    color: $site-white;
     @include flex-center;
     flex-direction: row;
     width: 90vw;
-    justify-content: space-between;
+    justify-content: space-around;
 
     #specialties-list {
+      color: $site-white;
       line-height: 1.3em;
       color: $charcoal;
       padding: 0 10px 40px 20px;
     }
     
-  
     #bargraphs {
       display: grid;
       row-gap: 10px;
@@ -215,6 +214,10 @@ main h1 {
   }
   
   @media screen and (max-width: 650px) {
+    .mike-pic-container img {
+      width: 800px;
+    }
+
     #list-and-bargraph {
       flex-direction: column;
       justify-content: space-around;
@@ -228,7 +231,6 @@ main h1 {
   @media screen and (min-width: 1000px) {
     #list-and-bargraph {
       max-width: 800px;
-
     }
   }
 }
