--- a/style/default/_colors.scss
+++ b/style/default/_colors.scss
@@ -1,3 +1,5 @@
+// Default color pallet used throughout
+
 $skobeloff: #006466ff;
 $midnight-green-eagle-green: #065a60ff;
 $midnight-green-eagle-green-2: #0b525bff;
