--- a/style/main.css
+++ b/style/main.css
@@ -5,12 +5,6 @@
 }
 
 /* hide scrollbar but allow scrolling */
-body {
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll;
-}
-
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
@@ -158,30 +152,6 @@ input[type=checkbox]:checked ~ .sidebar-menu .menu {
   right: 0;
 }
 
-.green-text-bg-none {
-  font-size: 14px;
-  font-weight: 300;
-  border-radius: 12px;
-  background: none;
-  border-color: #64FFDA;
-  border-width: 1px;
-  color: #64FFDA;
-  padding: 15px 20px;
-  letter-spacing: 0.1em;
-}
-
-.project-button {
-  margin-top: 20px;
-  font-size: 14px;
-  font-weight: 200;
-  letter-spacing: 0.1em;
-  padding: 5px 10px 5px 10px;
-  background: none;
-  border: 1px solid #64FFDA;
-  border-radius: 6px;
-  color: #64FFDA;
-}
-
 main h1 {
   font-size: 36px;
   font-weight: bolder;
@@ -319,14 +289,12 @@ main h1 {
 }
 
 #special-interests {
-  padding: 25px 25px 0 25px;
-  max-width: 360px;
   display: flex;
   justify-content: center;
   align-items: center;
-  align-items: center;
   flex-direction: column;
-  margin-bottom: 20px;
+  background-color: whitesmoke;
+  padding-bottom: 40px;
 }
 #special-interests h2 {
   color: #006466;
@@ -335,14 +303,16 @@ main h1 {
   padding-bottom: 30px;
 }
 #special-interests #list-and-bargraph {
+  color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   width: 90vw;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 #special-interests #list-and-bargraph #specialties-list {
+  color: whitesmoke;
   line-height: 1.3em;
   color: #1b3a4b;
   padding: 0 10px 40px 20px;
@@ -386,6 +356,9 @@ main h1 {
   }
 }
 @media screen and (max-width: 650px) {
+  #special-interests .mike-pic-container img {
+    width: 800px;
+  }
   #special-interests #list-and-bargraph {
     flex-direction: column;
     justify-content: space-around;
@@ -453,28 +426,8 @@ footer .social-links a {
   letter-spacing: 0.1em;
 }
 
-.project-button {
-  margin-top: 20px;
-  font-size: 14px;
-  font-weight: 200;
-  letter-spacing: 0.1em;
-  padding: 5px 10px 5px 10px;
-  background: none;
-  border: 1px solid #64FFDA;
-  border-radius: 6px;
-  color: #64FFDA;
-}
-
-.green-text-bg-none {
-  font-size: 14px;
-  font-weight: 300;
-  border-radius: 12px;
-  background: none;
-  border-color: #64FFDA;
-  border-width: 1px;
-  color: #64FFDA;
-  padding: 15px 20px;
-  letter-spacing: 0.1em;
+.green-text-bg-none:hover {
+  background: linear-gradient(0.25turn, #006466, 40%, #4D194D);
 }
 
 .project-button {
@@ -487,23 +440,6 @@ footer .social-links a {
   border: 1px solid #64FFDA;
   border-radius: 6px;
   color: #64FFDA;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-/* hide scrollbar but allow scrolling */
-body {
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll;
-}
-
-body::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .gallery-shell {
@@ -515,9 +451,6 @@ body::-webkit-scrollbar {
 
 .gallery-shell :nth-child(odd) .overlay {
   background-color: #006466;
-}
-.gallery-shell :nth-child(odd) .overlay :nth-child(3) .overlay {
-  background-color: aliceblue;
 }
 
 .container {
@@ -733,7 +666,7 @@ form button:hover {
 .resume-btn-shell img {
   width: 200px;
   border-radius: 25px;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 .resume-btn-shell p {
   margin-top: 20px;
@@ -744,7 +677,7 @@ form button:hover {
   line-height: 1.5em;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .main-content-shell {
     display: flex;
     flex-direction: row;
@@ -754,9 +687,6 @@ form button:hover {
   .main-content-shell p {
     width: 70%;
   }
-}
-body {
-  line-height: 1.3em;
 }
 .text-one {
   display: flex;
@@ -781,10 +711,7 @@ body {
 }
 
 .div-2 {
-  padding: 0;
-  margin-top: 0;
   justify-content: space-around;
-  align-items: start;
   padding-bottom: 30px;
 }
 .div-2 .text-two, .div-2 .text-three, .div-2 #lists {
@@ -815,7 +742,7 @@ body {
     padding-left: 70px;
     transition: 0.5s ease;
   }
-  main {
+  .about-me-content {
     font-size: 18px;
   }
   .above-line {
@@ -842,38 +769,25 @@ body {
   }
 }
 @media screen and (min-width: 1000px) {
-  .intro-container p {
-    font-size: 16px;
-  }
-  .intro-container h1 {
-    font-size: 48px;
-  }
-  main {
-    font-size: 20px;
-    line-height: 1.5em;
+  .above-line {
+    line-height: 1.3em;
+    font-size: 18px;
   }
   .img-div {
     padding: 0 25px 25px 0;
   }
   .img-div img {
-    width: 450px;
+    width: 400px;
   }
   .div-2 .text-two, .div-2 .text-three {
+    line-height: 1.3em;
+    font-size: 18px;
     width: 400px;
   }
   .div-2 .text-two p, .div-2 .text-three p {
     width: 100%;
   }
 }
-.div-2 {
-  padding: 20px;
-}
-@media screen and (min-height: 999px) {
-  .div-2 a {
-    color: #006466;
-  }
-}
-
 .blog-title {
   color: #1b3a4b;
 }
@@ -894,8 +808,6 @@ body {
 .paragraphs {
   color: #1b3a4b;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 .paragraphs h2 {
@@ -903,88 +815,11 @@ body {
   margin-bottom: 20px;
 }
 .paragraphs p {
-  padding: 10px;
-  margin-bottom: 15px;
-}
-.paragraphs ol {
-  margin-left: 20px;
-  margin-bottom: 15px;
-}
-.paragraphs .secondary-img {
-  margin-bottom: 20px;
-  width: 100vw;
-}
-.paragraphs .main-img {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 100vw;
-}
-@media screen and (min-width: 600px) {
-  .paragraphs .paragraphs p {
-    width: 90%;
-  }
-  .paragraphs .main-img {
-    width: 600px;
-  }
-  .paragraphs .secondary-img {
-    width: 600px;
-  }
-}
-
-.main-text {
-  margin-top: 20px;
-  color: #1b3a4b;
-}
-.main-text p {
-  padding-top: 15px;
-}
-.main-text .secondary-img {
-  width: 100vw;
-}
-
-.div-2 {
   padding: 20px;
-}
-@media screen and (min-height: 999px) {
-  .div-2 a {
-    color: #006466;
-  }
-}
-
-.blog-title {
-  color: #1b3a4b;
-}
-.blog-title .page-heading {
-  color: #006466;
-  font-size: 25px;
-  margin-bottom: 10px;
-  line-height: 1.1em;
-}
-.blog-title .divider {
-  width: 250px;
-  height: 5px;
-  background-color: #64FFDA;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.paragraphs {
-  color: #1b3a4b;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.paragraphs h2 {
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-.paragraphs p {
-  padding: 10px;
   margin-bottom: 15px;
 }
 .paragraphs ol {
-  margin-left: 20px;
+  margin-left: 40px;
   margin-bottom: 15px;
 }
 .paragraphs .secondary-img {
@@ -1014,6 +849,7 @@ body {
   font-family: "Rubik", Roboto;
   display: flex;
   flex-direction: column;
+  line-height: 1.3em;
 }
 body header {
   padding-top: 10px;
