--- a/style/components/_aboutme.scss
+++ b/style/components/_aboutme.scss
@@ -28,28 +28,29 @@
 }
 
 // styling for text paragraphs within white section 
-.div-2 {
-  justify-content: space-around;
+#white-div {
+  background-color: $site-white;
+  justify-content: center;
   padding-bottom: 30px;
 
-.text-two, .text-three, #lists {
-  color: $charcoal;
-  width: 300px;
-
-  p {
-    padding-top: 30px;
+  .text-two, .text-three, #lists {
+    color: $charcoal;
     width: 300px;
-  }
 
-  #lists{
-    padding: 20px 0 0 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: flex-start;
-    // width: 300px; 
+    p {
+      padding-top: 30px;
+      width: 300px;
+    }
+
+    // #lists{
+    //   padding: 20px 0 0 0;
+    //   display: flex;
+    //   flex-direction: row;
+    //   justify-content: space-around;
+    //   align-items: flex-start;
+    //   // width: 300px; 
+    // }
   }
-}
 }
 // button styling for taking user to contact page
 .cta {
@@ -86,7 +87,7 @@
   }
   }
 
-  .div-2 {
+  #white-div {
     @include flex-center;
     flex-direction: row;
     justify-content: space-around;
