--- a/style/components/_projects.scss
+++ b/style/components/_projects.scss
@@ -18,12 +18,12 @@
   border: 0;
   padding: 0;
   width: 400px;
-  height: 205px;
-  object-fit: cover;
+  height: 200px;
 }
 
 .image {
-  width: 400px;
+  padding: 0;
+  width: 100%;
   height: 100%;
   object-fit: cover; // setting to keep the picture size relative so it doesn't "stretch" to fit a container (it kind zooms instead) 
 }
