--- a/style/main.css
+++ b/style/main.css
@@ -208,42 +208,54 @@ main h1 {
   margin-top: 20px;
   color: #006466;
   margin-bottom: 30px;
+  text-align: center;
 }
-.div-2 #my-focus {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.div-2 #my-focus .skills-icons {
+.div-2 .skills-icons {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  width: 100vw;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
-.div-2 #my-focus .skills-icons section {
+.div-2 .skills-icons #react-python, .div-2 .skills-icons #node-mongo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 50%;
+}
+.div-2 .skills-icons section {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   width: 50%;
-  margin: px;
   padding: 10px;
 }
-.div-2 #my-focus .skills-icons section h5 {
+.div-2 .skills-icons section h5 {
   color: #1b3a4b;
 }
-.div-2 #my-focus .skills-icons section p {
+.div-2 .skills-icons section p {
   text-align: center;
   margin-bottom: 30px;
   color: #1b3a4b;
   font-size: 14px;
   width: 150px;
 }
-.div-2 #my-focus .skills-icons img {
+@media screen and (max-width: 620px) {
+  .div-2 .skills-icons {
+    flex-direction: column;
+  }
+  .div-2 .skills-icons #react-python, .div-2 .skills-icons #node-mongo {
+    width: 100vw;
+  }
+}
+
+img {
   padding: 10px;
   margin-bottom: 10px;
   justify-content: center;
@@ -279,6 +291,14 @@ main h1 {
   width: 150px;
   height: 150px;
   border-radius: 15px;
+  transition: 0.5s ease;
+}
+@media screen and (min-width: 620px) {
+  #who-am-i .pic-shell img {
+    width: 300px;
+    height: 300px;
+    transition: 0.5s ease;
+  }
 }
 #who-am-i #check-me-out {
   text-align: center;
@@ -296,10 +316,9 @@ main h1 {
   background-color: whitesmoke;
   padding-bottom: 40px;
 }
-#special-interests h2 {
+#special-interests h3 {
   color: #006466;
   text-decoration: underline;
-  padding-top: 25px;
   padding-bottom: 30px;
 }
 #special-interests #list-and-bargraph {
@@ -356,8 +375,8 @@ main h1 {
   }
 }
 @media screen and (max-width: 650px) {
-  #special-interests .mike-pic-container img {
-    width: 800px;
+  #special-interests .skills-icons {
+    flex-direction: column;
   }
   #special-interests #list-and-bargraph {
     flex-direction: column;
@@ -373,6 +392,11 @@ main h1 {
   }
 }
 
+@media screen and (max-width: 620px) {
+  #my-focus {
+    flex-direction: column;
+  }
+}
 footer {
   padding-top: 10px;
   display: flex;
@@ -461,13 +485,12 @@ footer .social-links a {
   border: 0;
   padding: 0;
   width: 400px;
-  height: 205px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: 200px;
 }
 
 .image {
-  width: 400px;
+  padding: 0;
+  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -710,24 +733,18 @@ form button:hover {
   height: auto;
 }
 
-.div-2 {
-  justify-content: space-around;
+#white-div {
+  background-color: whitesmoke;
+  justify-content: center;
   padding-bottom: 30px;
 }
-.div-2 .text-two, .div-2 .text-three, .div-2 #lists {
+#white-div .text-two, #white-div .text-three, #white-div #lists {
   color: #1b3a4b;
   width: 300px;
 }
-.div-2 .text-two p, .div-2 .text-three p, .div-2 #lists p {
+#white-div .text-two p, #white-div .text-three p, #white-div #lists p {
   padding-top: 30px;
   width: 300px;
-}
-.div-2 .text-two #lists, .div-2 .text-three #lists, .div-2 #lists #lists {
-  padding: 20px 0 0 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
 }
 
 .cta {
@@ -760,7 +777,7 @@ form button:hover {
     transition: 0.5s ease;
     margin-right: 20px;
   }
-  .div-2 {
+  #white-div {
     display: flex;
     justify-content: center;
     align-items: center;
