--- a/style/components/_home.scss
+++ b/style/components/_home.scss
@@ -1,13 +1,5 @@
 
 // intro container styling
-main h1 {
-  font-size: 36px;
-  font-weight: bolder;
-  color: whitesmoke;
-  margin: 0;
-  line-height: 1.1em;
-}
-
 .intro-container {
   display: flex;
   flex-direction: column;
@@ -15,6 +7,14 @@ main h1 {
   padding-left: 20px;
   padding-bottom: 20px;
   
+  h1 {
+  font-size: 36px;
+  font-weight: bolder;
+  color: whitesmoke;
+  margin: 0;
+  line-height: 1.1em;
+  }
+
   p {
     color: $electric-green;
     font-size: 14px;
@@ -30,7 +30,6 @@ main h1 {
   
   #title-headline {
     margin: 5px 0 0 -2px;
-    // font-weight: bolder;
     letter-spacing: 0.05em;
     color: $pale-purle;
   }
@@ -44,6 +43,7 @@ main h1 {
   }
   
 }
+
 // main white section 
 .div-2 {
 
@@ -61,7 +61,6 @@ main h1 {
     margin-top: 20px;
     color: $skobeloff;
     margin-bottom: 30px;
-    text-align: center
   }
 
   .skills-icons {
@@ -69,15 +68,13 @@ main h1 {
     flex-direction: row;
     width: 100vw;
     flex-wrap: wrap;
-    justify-content: space-around;
     
     #react-python, #node-mongo {
       @include flex-center;
       flex-direction: row;
-      justify-content: space-around;
       width: 50%;
     }
-  
+  // styling for program language logo, text and blurb
     section {
       @include flex-center();
       flex-direction: column;
@@ -85,6 +82,14 @@ main h1 {
       width: 50%;
       padding: 10px;
   
+      // logo images
+      img {
+        padding: 10px;
+        margin-bottom: 10px;
+        justify-content: center;
+        width:90px;
+      }
+
       h5 {
         color: $charcoal;
       }
@@ -98,6 +103,7 @@ main h1 {
       }
     }
   }
+
 // swtich the logos so they stack in colunms at smaller scren sizes
   @media screen and (max-width: 620px) {
     .skills-icons {
@@ -106,22 +112,6 @@ main h1 {
         width: 100vw;
       }
     }
-  }
-}
-// programming language logo images
-img {
-  padding: 10px;
-  margin-bottom: 10px;
-  justify-content: center;
-  width:90px;
-}
-
-#my-focus-and-check-me-out {
-  @include flex-center;
-  flex-direction: column;
-
-  @media screen and (min-width: 700px) {
-    flex-direction: row;
   }
 }
 
@@ -197,17 +187,17 @@ img {
       h5 {
         margin-left: 5px;
       }
-      
+      // colouring for bar graph and animation control
       .inner-divs {
         background: linear-gradient(.25turn, $skobeloff, 40%, $purple-light);
         animation: grow 5s ease;
       }
-  
+  // individual list items
       #html {
-        width: 360px;
+        width: 350px;
       }
       #cyber {
-        width: 350px;
+        width: 340px;
       }
       #java {
         width: 300px;
@@ -235,10 +225,6 @@ img {
     #list-and-bargraph {
       flex-direction: column;
       justify-content: space-around;
-
-      #specialties-list {
-        margin-bottom: 20px;
-      }
     }
   }
 
@@ -249,12 +235,4 @@ img {
   }
 }
 
-  
-@media screen and (max-width: 620px) {
-  #my-focus {
-    flex-direction: column;
-  }
-}
 
-//  I know that this could be refactored quite a bit better I just ran out of time!
-// it still works, mostly :D
